syntax = "proto3";
package auth;
option go_package = "pkg/protocol/pb/authpb";

import "google/protobuf/empty.proto";

service AuthIntService {
  // 权限校验
  rpc Auth (AuthRequest) returns (google.protobuf.Empty);
  
  // 用户登录
  rpc Login (LoginRequest) returns (LoginResponse);
}

message AuthRequest {
  uint64 user_id = 1;
  uint64 device_id = 2;
  string token = 3;
}

message LoginRequest {
  string username = 1; // 用户名、邮箱或手机号
  string password = 2; // 用户密码
  uint64 device_id = 3; // 设备ID
}

message LoginResponse {
  uint64 user_id = 1; // 用户ID
  string token = 2; // 登录成功后返回的JWT或其他令牌
  int64 expires_at = 3; // 令牌过期时间（Unix时间戳）
  string message = 4; // 登录结果信息（如错误原因或成功提示）
  UserInfo user_info = 5; // 用户基本信息
}

message UserInfo {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string phone_number = 4;
  string nickname = 5;
  string avatar_url = 6;
}
